# ardupilot_gazebo_models

./: CMakeLists.txt  README.md
config/dolly/: README.md
config/dolly/params/: dolly.parm
config/dolly/scripts/: publish_pids.py
config/fan_car/: README.md
config/fan_car/params/: fan_car.parm
config/fan_car/scripts/: publish_pids.py  sim_ardupilot_thrust_stand.py  sim_fan_car.ipynb  (+3 more)
config/jet_boat/: README.md
config/quadruped/: README.md
config/sawppy/: README.md
config/steer_bot/: README.md
models/dolly/: model.config  model.sdf
models/dolly_ardupilot/: model.config  model.sdf
models/dolly_ball_castor/: model.config  model.sdf
models/dolly_ball_castor_ardupilot/: model.config  model.sdf
models/fan_car/: model.config  model.sdf
models/fan_car_ardupilot/: model.config  model.sdf
models/fan_car_ball_castor/: model.config  model.sdf
models/fan_car_ball_castor_ardupilot/: model.config  model.sdf
models/jet_boat/: model.config  model.sdf
models/jet_boat_proxy/: model.config  model.sdf
models/jet_boat_proxy_ardupilot/: model.config  model.sdf
models/quadruped/: model.config  model.sdf  quadruped.urdf
models/quadruped_ardupilot/: model.config  model.sdf
models/sawppy_ardupilot/: model.config  model.sdf
models/sonar/: model.config  model.sdf
models/steer_bot/: model.config  model.sdf
models/steer_bot_ardupilot/: model.config  model.sdf
models/turtlebot_ardupilot/: model.config  model.sdf
worlds/: dolly_test.world  fan_car.world  quadruped.world  sand.world  steer_bot.world  steer_bot_obstacle.world  steer_bot_playpen.sdf
(+18 files in other folders)
